--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
     </div>
     </div>
 </header>
-<div class="banner">
-    <div class="banner__content">
+    <div id="banner">
         <p class="banner__text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
         Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
         natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
@@ -51,8 +50,6 @@
         </form>
         </div>
     </div>
-
-</div>
 <div id="benefits">
     <div class="benefits__block" style="background: #43b1d2;">
         <img src='img/imgben.jpg' class="benefits__block_image">
